Adding `add another` button

--- a/web/composer.json
+++ b/web/composer.json
@@ -25,7 +25,8 @@
         "drupal/bootstrap": "^3.11",
         "drupal/views_fieldsets": "^3.3",
         "drupal/ds": "^3",
-        "drupal/button_link": "^1"
+        "drupal/button_link": "^1",
+        "drupal/addanother": "^1.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
