--- a/config/site/views.view.calendar.yml
+++ b/config/site/views.view.calendar.yml
@@ -510,14 +510,19 @@ display:
         use_more: false
         use_more_always: false
         use_more_text: false
+        pager: false
       use_more_always: true
       use_more_text: more
+      pager:
+        type: some
+        options:
+          items_per_page: 5
+          offset: 0
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - url.query_args
         - 'user.node_grants:view'
         - user.permissions
       tags:
