--- a/config/site/core.entity_form_display.node.page.default.yml
+++ b/config/site/core.entity_form_display.node.page.default.yml
@@ -22,12 +22,16 @@ content:
     settings:
       title: Section
       title_plural: Sections
-      edit_mode: open
+      edit_mode: closed
       closed_mode: summary
-      autocollapse: none
-      add_mode: dropdown
+      autocollapse: all
+      add_mode: modal
       form_display_mode: default
       default_paragraph_type: _none
+      features:
+        duplicate: duplicate
+        collapse_edit_all: collapse_edit_all
+        add_above: '0'
     third_party_settings: {  }
   path:
     type: path
