--- a/config/site/core.entity_form_display.node.resource_page.default.yml
+++ b/config/site/core.entity_form_display.node.resource_page.default.yml
@@ -22,15 +22,21 @@ content:
     type: fontawesome_icon_widget
     region: content
   field_resource_page_section:
-    type: entity_reference_paragraphs
+    type: paragraphs
     weight: 2
     settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: open
-      add_mode: dropdown
+      title: Section
+      title_plural: Sections
+      edit_mode: closed
+      closed_mode: summary
+      autocollapse: all
+      add_mode: modal
       form_display_mode: default
-      default_paragraph_type: ''
+      default_paragraph_type: _none
+      features:
+        duplicate: duplicate
+        collapse_edit_all: collapse_edit_all
+        add_above: '0'
     third_party_settings: {  }
     region: content
   publish_on:
