Adding `clone` functionality

--- a/config/site/core.extension.yml
+++ b/config/site/core.extension.yml
@@ -21,6 +21,7 @@ module:
   draggableviews: 0
   dynamic_page_cache: 0
   editor: 0
+  entity_clone: 0
   entity_reference_revisions: 0
   field: 0
   field_group: 0
