--- a/web/modules/custom/ps267/ps267.libraries.yml
+++ b/web/modules/custom/ps267/ps267.libraries.yml
@@ -1,6 +1,11 @@
 ps267-admin:
   version: 1.x
   css:
+    theme:
+      css/admin-theme.css: {}
+ps267-dashboard:
+  version: 1.x
+  css:
     layout:
-      css/admin-layout.css: {}
+      css/dashboard-layout.css: {}
 
