--- a/web/composer.json
+++ b/web/composer.json
@@ -28,7 +28,8 @@
         "drupal/ds": "^3",
         "drupal/button_link": "^1",
         "drupal/addanother": "^1.0",
-        "drupal/entity_clone": "^1.0"
+        "drupal/entity_clone": "^1.0",
+        "kigkonsult/icalcreator": "^2.24"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
