Cleaning up admin interface for non-admins

--- a/config/site/user.role.pta_board_member.yml
+++ b/config/site/user.role.pta_board_member.yml
@@ -6,4 +6,45 @@ id: pta_board_member
 label: 'PTA Board Member'
 weight: 3
 is_admin: null
-permissions: {  }
+permissions:
+  - 'access administration pages'
+  - 'access content overview'
+  - 'access contextual links'
+  - 'access draggableviews'
+  - 'access site reports'
+  - 'access toolbar'
+  - 'change own username'
+  - 'clone node entity'
+  - 'create announcement content'
+  - 'create calendar_event content'
+  - 'create fundraiser content'
+  - 'create page content'
+  - 'create resource_page content'
+  - 'create url aliases'
+  - 'edit any announcement content'
+  - 'edit any calendar_event content'
+  - 'edit any fundraiser content'
+  - 'edit any page content'
+  - 'edit any resource_page content'
+  - 'edit own announcement content'
+  - 'edit own calendar_event content'
+  - 'edit own fundraiser content'
+  - 'edit own page content'
+  - 'edit own resource_page content'
+  - 'manage site alerts'
+  - 'revert announcement revisions'
+  - 'revert calendar_event revisions'
+  - 'revert fundraiser revisions'
+  - 'revert page revisions'
+  - 'revert resource_page revisions'
+  - 'schedule publishing of nodes'
+  - 'use add another'
+  - 'view announcement revisions'
+  - 'view calendar_event revisions'
+  - 'view fundraiser revisions'
+  - 'view own unpublished content'
+  - 'view page revisions'
+  - 'view resource_page revisions'
+  - 'view scheduled content'
+  - 'view the administration theme'
+  - 'view unpublished paragraphs'
