--- a/web/composer.json
+++ b/web/composer.json
@@ -29,7 +29,8 @@
         "drupal/button_link": "^1",
         "drupal/addanother": "^1.0",
         "drupal/entity_clone": "^1.0",
-        "kigkonsult/icalcreator": "^2.24"
+        "kigkonsult/icalcreator": "^2.24",
+        "drupal/google_analytics": "^2"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
