--- a/config/site/core.extension.yml
+++ b/config/site/core.extension.yml
@@ -32,6 +32,7 @@ module:
   focal_point: 0
   fontawesome: 0
   footer_message: 0
+  google_analytics: 0
   google_map_field: 0
   gtranslate: 0
   help: 0
@@ -39,7 +40,6 @@ module:
   image: 0
   layout_discovery: 0
   link: 0
-  media: 0
   menu_ui: 0
   node: 0
   options: 0
@@ -49,11 +49,8 @@ module:
   quickedit: 0
   rdf: 0
   scheduler: 0
-  search: 0
-  shortcut: 0
   site_alert: 0
   system: 0
-  taxonomy: 0
   text: 0
   token: 0
   toolbar: 0
