--- a/web/composer.json
+++ b/web/composer.json
@@ -30,7 +30,8 @@
         "drupal/addanother": "^1.0",
         "drupal/entity_clone": "^1.0",
         "kigkonsult/icalcreator": "^2.24",
-        "drupal/google_analytics": "^2"
+        "drupal/google_analytics": "^2",
+        "drupal/views_bulk_operations": "^2"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
