--- a/config/site/core.extension.yml
+++ b/config/site/core.extension.yml
@@ -1,6 +1,7 @@
 module:
   addanother: 0
   admin_toolbar: 0
+  admin_toolbar_links_access_filter: 0
   admin_toolbar_tools: 0
   adminimal_admin_toolbar: 0
   automated_cron: 0
@@ -50,7 +51,6 @@ module:
   quickedit: 0
   rdf: 0
   scheduler: 0
-  site_alert: 0
   system: 0
   text: 0
   token: 0
