--- a/config/site/views.view.calendar.yml
+++ b/config/site/views.view.calendar.yml
@@ -81,7 +81,7 @@ display:
           row_class: event
           default_row_class: false
           type: ul
-          wrapper_class: mini-calendar
+          wrapper_class: calendar
           class: events
       row:
         type: fields
@@ -486,6 +486,8 @@ display:
       relationships: {  }
       arguments: {  }
       display_extenders: {  }
+      link_url: ''
+      link_display: page_1
     cache_metadata:
       max-age: -1
       contexts:
@@ -923,6 +925,7 @@ display:
         use_more_always: false
         use_more_text: false
         pager: false
+        css_class: false
       use_more_always: true
       use_more_text: 'View Full Calendar'
       pager:
@@ -930,6 +933,7 @@ display:
         options:
           items_per_page: 5
           offset: 0
+      css_class: mini-calendar
     cache_metadata:
       max-age: -1
       contexts:
@@ -955,6 +959,8 @@ display:
           offset: 0
       defaults:
         pager: false
+        css_class: false
+      css_class: full-calendar
     cache_metadata:
       max-age: -1
       contexts:
