--- a/config/site/views.view.calendar.yml
+++ b/config/site/views.view.calendar.yml
@@ -142,6 +142,7 @@ display:
           fields:
             - field_calendar_event_date
             - field_calendar_event_date_1
+            - field_calendar_event_date_2
           wrapper: div
           legend: ''
           classes: date
@@ -265,6 +266,70 @@ display:
           settings:
             timezone_override: America/New_York
             date_format: d
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+        field_calendar_event_date_2:
+          id: field_calendar_event_date_2
+          table: node__field_calendar_event_date
+          field: field_calendar_event_date
+          relationship: none
+          group_type: group
+          admin_label: 'Date (day of week)'
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: span
+          element_class: day-of-week
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: '0'
+          element_wrapper_class: ''
+          element_default_classes: false
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: datetime_custom
+          settings:
+            timezone_override: America/New_York
+            date_format: D
           group_column: value
           group_columns: {  }
           group_rows: true
