--- a/web/.gitignore
+++ b/web/.gitignore
@@ -37,3 +37,7 @@ sites/simpletest
 
 # Ignore SimpleTest multi-site environment.
 # simpletest
+#
+
+# Shaared host automatically generates favicons. Ignore them.
+favicon.*
