--- a/web/composer.json
+++ b/web/composer.json
@@ -32,7 +32,8 @@
         "kigkonsult/icalcreator": "^2.24",
         "drupal/google_analytics": "^2",
         "drupal/views_bulk_operations": "^2",
-        "drupal/backup_migrate": "^4"
+        "drupal/backup_migrate": "^4",
+        "drush/drush": "^9.3"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
