Creating a full calendar view

--- a/web/composer.json
+++ b/web/composer.json
@@ -33,7 +33,8 @@
         "drupal/google_analytics": "^2",
         "drupal/views_bulk_operations": "^2",
         "drupal/backup_migrate": "^4",
-        "drush/drush": "^9.3"
+        "drush/drush": "^9.3",
+        "drupal/devel": "^1"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
