--- a/config/site/block.block.fundraisers_quicklist.yml
+++ b/config/site/block.block.fundraisers_quicklist.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - views.view.fundraisers
   module:
+    - system
     - views
   theme:
     - eses
@@ -21,4 +22,9 @@ settings:
   label_display: visible
   views_label: ''
   items_per_page: none
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    pages: /calendar
+    negate: true
+    context_mapping: {  }
