--- a/config/site/core.entity_form_display.paragraph.basic_text.default.yml
+++ b/config/site/core.entity_form_display.paragraph.basic_text.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.basic_text.field_basic_text_attachment
     - field.field.paragraph.basic_text.field_basic_text_button
     - field.field.paragraph.basic_text.field_basic_text_formatted_text
     - field.field.paragraph.basic_text.field_basic_text_header
@@ -15,6 +16,24 @@ targetEntityType: paragraph
 bundle: basic_text
 mode: default
 content:
+  field_basic_text_attachment:
+    type: paragraphs
+    weight: 5
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: closed
+      closed_mode: summary
+      autocollapse: all
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: attachments
+      features:
+        duplicate: duplicate
+        collapse_edit_all: collapse_edit_all
+        add_above: '0'
+    third_party_settings: {  }
+    region: content
   field_basic_text_button:
     type: paragraphs
     weight: 3
