--- a/config/site/core.entity_view_display.paragraph.basic_text.default.yml
+++ b/config/site/core.entity_view_display.paragraph.basic_text.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.basic_text.field_basic_text_attachment
     - field.field.paragraph.basic_text.field_basic_text_button
     - field.field.paragraph.basic_text.field_basic_text_formatted_text
     - field.field.paragraph.basic_text.field_basic_text_header
@@ -32,15 +33,33 @@ third_party_settings:
       ds_content:
         - field_basic_text_header
         - field_basic_text_formatted_text
+        - field_basic_text_attachment
         - field_basic_text_button
 id: paragraph.basic_text.default
 targetEntityType: paragraph
 bundle: basic_text
 mode: default
 content:
-  field_basic_text_button:
+  field_basic_text_attachment:
     type: entity_reference_revisions_entity_view
     weight: 2
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: minimal
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    region: ds_content
+  field_basic_text_button:
+    type: entity_reference_revisions_entity_view
+    weight: 3
     label: hidden
     settings:
       view_mode: default
