--- a/config/site/field.field.paragraph.attachments.field_attachment_file.yml
+++ b/config/site/field.field.paragraph.attachments.field_attachment_file.yml
@@ -26,7 +26,7 @@ settings:
   file_directory: '[date:custom:Y]-[date:custom:m]'
   file_extensions: 'pdf doc docx xls xslx ppt pptx jpg png gif pages numbers ics txt'
   max_filesize: ''
-  description_field: false
+  description_field: true
   handler: 'default:file'
   handler_settings: {  }
 field_type: file
