--- a/config/site/core.extension.yml
+++ b/config/site/core.extension.yml
@@ -14,6 +14,8 @@ module:
   calendar_feed_view: 0
   ckeditor: 0
   config: 0
+  config_filter: 0
+  config_split: 0
   contact: 0
   contact_categories: 0
   contextual: 0
@@ -62,7 +64,6 @@ module:
   views_fieldsets: 0
   views_slideshow: 0
   views_slideshow_cycle: 0
-  views_ui: 0
   ds: 1
   menu_link_content: 1
   pathauto: 1
