--- a/web/composer.json
+++ b/web/composer.json
@@ -34,7 +34,8 @@
         "drupal/views_bulk_operations": "^2",
         "drupal/backup_migrate": "^4",
         "drush/drush": "^9.3",
-        "drupal/devel": "^1"
+        "drupal/devel": "^1",
+        "drupal/config_split": "^1.3"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
