--- a/config/site/core.entity_view_display.node.announcement.default.yml
+++ b/config/site/core.entity_view_display.node.announcement.default.yml
@@ -21,16 +21,17 @@ third_party_settings:
       disable_css: false
       entity_classes: all_classes
       settings:
-        wrappers: null
-        outer_wrapper: null
+        wrappers:
+          ds_content: div
+          ds_hidden: div
+        outer_wrapper: div
         attributes: ''
-        link_attribute: null
-        link_custom: null
+        link_attribute: ''
+        link_custom: ''
         classes:
           layout_class: {  }
     regions:
       ds_content:
-        - node_title
         - node_changed_date
         - field_announcement_image
         - body
@@ -38,14 +39,9 @@ third_party_settings:
     fields:
       node_changed_date:
         plugin_id: node_changed_date
-        weight: 1
-        label: hidden
-        formatter: ds_post_date_detailed_medium_date
-      node_title:
-        plugin_id: node_title
         weight: 0
         label: hidden
-        formatter: default
+        formatter: ds_post_date_detailed_medium_date
 id: node.announcement.default
 targetEntityType: node
 bundle: announcement
@@ -54,12 +50,12 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 3
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     region: ds_content
   field_announcement_attachment:
-    weight: 4
+    weight: 3
     label: hidden
     settings:
       use_description_as_link_text: true
@@ -67,7 +63,7 @@ content:
     type: file_default
     region: ds_content
   field_announcement_image:
-    weight: 2
+    weight: 1
     label: hidden
     settings:
       image_style: ''
