--- a/config/site/google_analytics.settings.yml
+++ b/config/site/google_analytics.settings.yml
@@ -1,7 +1,7 @@
 account: UA-121173660-1
 premium: false
-domain_mode: 0
-cross_domains: ''
+domain_mode: 2
+cross_domains: 'ps267.org, ps267.docker.localhost:8002'
 visibility:
   request_path_mode: 0
   request_path_pages: "/admin\r\n/admin/*\r\n/batch\r\n/node/add*\r\n/node/*/*\r\n/user/*/*"
