--- a/config/site/user.role.pta_board_member.yml
+++ b/config/site/user.role.pta_board_member.yml
@@ -19,7 +19,18 @@ permissions:
   - 'create fundraiser content'
   - 'create page content'
   - 'create resource_page content'
+  - 'create testimonial content'
   - 'create url aliases'
+  - 'delete any announcement content'
+  - 'delete any calendar_event content'
+  - 'delete any fundraiser content'
+  - 'delete any testimonial content'
+  - 'delete own announcement content'
+  - 'delete own calendar_event content'
+  - 'delete own fundraiser content'
+  - 'delete own page content'
+  - 'delete own resource_page content'
+  - 'delete own testimonial content'
   - 'edit any announcement content'
   - 'edit any calendar_event content'
   - 'edit any fundraiser content'
