Remove `attachment` header

--- a/config/site/core.entity_view_display.paragraph.attachments.default.yml
+++ b/config/site/core.entity_view_display.paragraph.attachments.default.yml
@@ -14,7 +14,7 @@ mode: default
 content:
   field_attachment_file:
     weight: 0
-    label: above
+    label: hidden
     settings:
       use_description_as_link_text: true
     third_party_settings: {  }
