--- a/web/composer.json
+++ b/web/composer.json
@@ -35,7 +35,8 @@
         "drupal/backup_migrate": "^4",
         "drush/drush": "^9.3",
         "drupal/devel": "^1",
-        "drupal/config_split": "^1.3"
+        "drupal/config_split": "^1.3",
+        "drupal/redirect_after_login": "^2"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
