--- a/config/site/core.extension.yml
+++ b/config/site/core.extension.yml
@@ -41,6 +41,7 @@ module:
   google_analytics: 0
   google_map_field: 0
   gtranslate: 0
+  handy_cache_tags: 0
   help: 0
   hide_revision_field: 0
   image: 0
