--- a/web/composer.json
+++ b/web/composer.json
@@ -36,7 +36,8 @@
         "drush/drush": "^9.3",
         "drupal/devel": "^1",
         "drupal/config_split": "^1.3",
-        "drupal/redirect_after_login": "^2"
+        "drupal/redirect_after_login": "^2",
+        "drupal/handy_cache_tags": "^1.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
